- Fix layout of color picker on small screens. - Ajax loading methods now support javascript behaviors/rules. - Possible to remove all conditions from a Pop Up.

--- a/@dev-css/popup-admin.scss
+++ b/@dev-css/popup-admin.scss
@@ -894,8 +894,15 @@ div.msg-err {
 		}
 	}
 
+	.col-colorpicker {
+		width: 41.66%;
+		min-width: 260px;
+		margin-bottom: 10px;
+	}
 
 	.wp-picker-container {
+		width: 260px;
+
 		* {
 			box-sizing: content-box;
 		}
